app/assets/stylesheets/_main.scss
@import 'bootstrap_overwrites';
@import 'bootstrap/variables';

html, body {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  height: 100vh;
  width: 100%;
}

body {
  flex: 1 0 auto;
}

.navbar-toggle {
  border-color: $black;
}

.icon-bar {
  background-color: $black;
}

.row {
  margin-bottom: $padding-large-horizontal;
}

.brand-image {
  height: 100%;
}

.wrapper {
  flex: 1 0 auto;
  align-self: center;
}

.footer {
  flex: 0 0 auto;
  align-self: center;
  background-color: $white;
}

